# IranianBillsValidation

./: .gitignore  LICENSE  MANIFEST  README  README.md  Receipt.py  setup.cfg  setup.py
IranianBillsValidation/: __init__.py
iranian_bills_validation/: Receipt.py  __init__.py
