[metadata]
name = Iranian Bills Validation
version = 1.0
author = Amin Morakabi Sabet
author_email = vivaams@yahoo.com
description = This module checks and validates your bills and returns the required information
long_description = file: README.md
description-file = README
url = https://github.com/vivaams/iranian_bills_validation
project_urls =
    Bug Tracker = https://github.com/vivaams/iranian_bills_validation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent