[metadata]
name = iranian_bills_validation
version = 1.0.1
author = Amin Morakabi Sabet
author_email = vivaams@yahoo.com
description = This module checks and validates your bills and returns the required information
long_description = file: README.md
description-file = README
url = https://github.com/vivaams/iranian_bills_validation
project_urls =
    Bug Tracker = https://github.com/vivaams/iranian_bills_validation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src